add: 웹에서는 저장, 'read/' 호출하면 저장된 값 보내줌

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
       {% csrf_token %}
       <!-- <p><input id="title" type="text" name="title" placeholder="title"></p> -->
       <p><textarea id="body" name="body" placeholder="body"></textarea></p>
-      <p><input id="btn_save" type="button" value="SAVE"></p>
-      <p><input id="btn_get" type="button" value="GET"></p>
+      <p><input id="btn_create" type="button" value="CREATE"></p>
     </div>
 
     <div id="result">
